...
      <Tab.Screen
        name="Timeline"
        component={HealthDashboardScreen}
        options={{
          tabBarIcon: TimelineIcon,
          tabBarLabel: "Health",
          tabBarAccessibilityLabel: "Timeline tab",
        }}
      />
      <Tab.Screen
        name="Upload"
        component={UploadScreen}
        options={{
...
      />
      <Tab.Screen
        name="Settings"
        component={SettingsScreen}
        options={{
          tabBarIcon: SettingsTabIcon,
          tabBarAccessibilityLabel: "Settings tab",
        }}
      />
    </Tab.Navigator>
  );
}

