...
   */
  RestoreBackup: undefined;
};

export type MainTabsParamList = {
  Timeline: undefined;
  Chat: undefined;
  Upload: undefined;
  Settings: undefined;
};

